# projeto-caderno-nr1

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  config.json  docker-compose.yml  main.cc
.github/workflows/: build-image.yml
controllers/: ApiController.cc  ApiController.h
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml
public/: coletivo.html  index.html
public/css/: style.css
public/js/: coletivo.js  main.js
